// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField snapshots should render TextField 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextField"
    data-test-text-field=""
    data-test-tooltip=""
  >
    <div
      class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled"
      data-test-text-field-wrapper=""
    >
      <input
        class="TextFieldWrapper__input"
        data-test-text-field-input=""
        maxlength="6"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField snapshots should render with label 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextField"
    data-test-text-field=""
    data-test-tooltip=""
  >
    <small
      class="css-1jnxvbp TextFieldLabel Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      label
    </small>
    <div
      class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled"
      data-test-text-field-wrapper=""
    >
      <input
        class="TextFieldWrapper__input"
        data-test-text-field-input=""
        maxlength="6"
      />
    </div>
  </div>
</DocumentFragment>
`;
